=== fitdistrplus : Help to fit of a parametric distribution ===

Version 1.0-3
=============

NEW FEATURES
- new generic functions for fitdist(cens): loglik, vcov and coef.

BUG FIXES
- fitdist can handle non invertible Hessian matrices.


Version 1.0-2
=============

NEW FEATURES
- plotdist can plot empirical density as an histogram, a density plot 
or both superimposed.
- a strong warning was added to the documentation of function descdist
about the problematic high variance of skewness and kurtosis.

BUG FIXES
- bug fixed in bootdistcens : argument fix.arg is now correctly passed to mle


Version 1.0-1
=============

NEW FEATURES
- gofstat can handle multiple 'fitdist' objects.
- plotdist for discrete data is slightly enhanced.

Version 1.0-0
=============

NEW FEATURES
- update cdfcomp and add denscomp, ppcomp and qqcomp functions.
- add of an argument Turnbull.confint to functions plotdistcens and cdfcompcens in order to 
    draw confidence intervals on the empirical distribution only if requested.
- ppoints now used in "fitdist" for QQ plot, PP plot and cdf plot for continuous data
    (was used only for QQ plot in previous versions) to enable Blom type plotting position
    (using by default Hazen plotting position than can be chanfge using arguments use.ppoints and a.ppoints)
- many changes in the examples given in the reference manual.
- the vignette was removed, to be transformed in a paper that we will soon submit to a journal.
- add of four data sets : fluazinam, salinity, danishuni and danishmulti.
- add of functions to calculate quantiles of the fitted distribution, with 95 percent CI calculated by bootstrap :
  quantile generic function is available both for "fitdist" and "bootdist" objects and 
  quantile generic function is available both for "fitdistcens" and "bootdistcens" objects.

BUG FIXES
- correction the formula for the CvM test for Weibull distribution
- elimination of CvM and AD tests for normal, lognormal and logistic distributions : 