@@ -64,9 +64,9 @@ ppcomp(ft, xlim, ylim, xlogscale = FALSE, ylogscale = FALSE, main, xlab, ylab,
 \item{verticals}{If \code{TRUE}, draws also vertical lines for the empirical cdf function. 
     Only taken into account if \code{horizontals=TRUE}. }
 \item{use.ppoints}{If \code{TRUE}, probability points of the empirical distribution
-    are defined as 
-    \code{(1:n - a.ppoints)/(n - 2a.ppoints + 1)}
-     using function \code{\link{ppoints}}. If FALSE, 
+    are defined using function \code{\link{ppoints}} as 
+    \code{(1:n - a.ppoints)/(n - 2a.ppoints + 1)}.
+     If FALSE, 
     probability points are simply defined as \code{1:n / n}. This argument is ignored 
     for discrete data.}
 \item{a.ppoints}{If \code{use.ppoints=TRUE}, this is passed to function \code{\link{ppoints}}.}
